# chain_verse

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  fly.toml  railway.toml
.github/workflows/: daily-poem.yml
backend/: .env.example  Cargo.toml  schema.sql  words.json
backend/src/: api.rs  blockchain.rs  consts.rs  database.rs  derivation.rs  lib.rs  main.rs  poem_generator.rs  scheduler.rs  words.rs
frontend/: .env.production
frontend/public/data/: archive.json  today.json
frontend/src/: App.css  App.jsx
scripts/: daily-poem.js  package.json
